# distributed-codelabs

./: .gitignore  README.en.md  README.md
build-repo/base/customization/config_policy/: BUILD.gn  README.md  README_zh.md  bundle.json  config_policy.gni
build-repo/base/customization/config_policy/frameworks/config_policy/: BUILD.gn
build-repo/base/customization/config_policy/frameworks/dfx/: hisysevent.yaml
build-repo/base/customization/config_policy/test/resource/: ohos_test.xml
build-repo/base/customization/config_policy/test/unittest/: BUILD.gn  config_policy_utils_test.cpp  config_policy_utils_test.h
build-repo/base/hiviewdfx/hisysevent/frameworks/native/: BUILD.gn  hisysevent_json_decorator.cpp  hisysevent_tool.cpp  hisysevent_tool_listener.cpp  hisysevent_tool_query.cpp  json_flatten_parser.cpp  main.cpp
build-repo/base/hiviewdfx/hitrace/cmd/: BUILD.gn
build-repo/base/hiviewdfx/hitrace/cmd/config/: hitrace.cfg  hitrace.rc
build-repo/base/hiviewdfx/hitrace/cmd/example/: hitrace_example.cpp
build-repo/base/hiviewdfx/hitrace/cmd/include/: hitrace_osal.h
build-repo/base/hiviewdfx/hitrace/cmd/src/: hitrace_cmd.cpp  hitrace_osal.cpp
build-repo/base/hiviewdfx/hitrace/lite/test/: BUILD.gn
build-repo/base/hiviewdfx/hitrace/test/: BUILD.gn
build-repo/base/notification/common_event_service/: OAT.xml  README_zh.md  bundle.json  event.gni  hisysevent.yaml
build-repo/base/notification/common_event_service/.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
build-repo/base/notification/common_event_service/frameworks/common/: BUILD.gn
build-repo/base/notification/common_event_service/frameworks/core/: BUILD.gn
build-repo/base/notification/common_event_service/frameworks/native/: BUILD.gn
build-repo/base/notification/common_event_service/interfaces/inner_api/: async_common_event_result.h  common_event_data.h  common_event_manager.h  common_event_publish_info.h  common_event_subscribe_info.h  common_event_subscriber.h  common_event_support.h  matching_skills.h
build-repo/base/notification/common_event_service/sa_profile/: 3299.xml  BUILD.gn
build-repo/base/notification/common_event_service/services/: BUILD.gn
build-repo/base/notification/common_event_service/services/include/: ability_manager_death_recipient.h  ability_manager_helper.h  access_token_helper.h  bms_death_recipient.h  bundle_manager_helper.h  common_event_control_manager.h  common_event_manager_service.h  common_event_manager_service_ability.h  common_event_permission_manager.h  common_event_record.h  common_event_sticky_manager.h  common_event_subscriber_manager.h  common_event_support_mapper.h  event_report.h  history_event_record.h  inner_common_event_manager.h  ordered_event_handler.h  ordered_event_record.h  os_account_manager_helper.h  publish_manager.h  static_subscriber_connection.h  static_subscriber_manager.h  subscriber_death_recipient.h  system_time.h
build-repo/base/notification/common_event_service/services/resource/: static_subscriber_config.json
build-repo/base/notification/common_event_service/services/src/: ability_manager_death_recipient.cpp  ability_manager_helper.cpp  access_token_helper.cpp  bms_death_recipient.cpp  bundle_manager_helper.cpp  common_event_control_manager.cpp  common_event_manager_service.cpp  common_event_manager_service_ability.cpp  common_event_permission_manager.cpp  common_event_sticky_manager.cpp  event_report.cpp  (+10 more)
build-repo/base/notification/common_event_service/tools/: BUILD.gn
build-repo/base/security/device_auth/: BUILD.gn  README.md  README_zh.md  bundle.json  deviceauth_env.gni  hisysevent.yaml
build-repo/base/security/device_auth/deps_adapter/: BUILD.gn  deviceauth_hals.gni
build-repo/base/security/device_auth/services/: BUILD.gn  device_auth.c  deviceauth.gni  deviceauth_account.gni
build-repo/base/security/huks/: BUILD.gn  README.md  README_zh.md  bundle.json  hisysevent.yaml  huks.gni
build-repo/base/security/huks/test/: BUILD.gn
build-repo/commonlibrary/c_utils/base/: BUILD.gn
build-repo/commonlibrary/c_utils/base/include/: file_ex.h  parcel.h  refbase.h  securectype.h  thread_pool.h  timer.h
build-repo/commonlibrary/c_utils/base/src/: ashmem.cpp  event_reactor.cpp  event_reactor.h  file_ex.cpp  parcel.cpp  refbase.cpp  string_ex.cpp  thread_ex.cpp  thread_pool.cpp  timer.cpp  unicode_ex.cpp
build-repo/foundation/distributeddatamgr/datamgr_service/: BUILD.gn  README.md  README_zh.md  bundle.json  datamgr_service.gni  hisysevent.yaml
build-repo/foundation/distributeddatamgr/datamgr_service/conf/: BUILD.gn  config.json
build-repo/foundation/distributeddatamgr/kv_store/: BUILD.gn  README_zh.md  bundle.json  kv_store.gni
build-repo/foundation/distributeddatamgr/relational_store/: .gitignore  README_zh.md  bundle.json  relational_store.gni
build-repo/foundation/distributedhardware/device_manager/: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  device_manager.gni  hisysevent.yaml
build-repo/foundation/distributedhardware/device_manager/display/: @ohos.distributedHardware.deviceManager.d.ts  build-profile.json5  package-lock.json  package.json
build-repo/foundation/distributedhardware/device_manager/ext/: BUILD.gn
build-repo/foundation/distributedhardware/device_manager/sa_profile/: 4802.xml  BUILD.gn  device_manager.cfg
build-repo/foundation/distributedhardware/device_manager/test/: BUILD.gn
build-repo/foundation/distributedhardware/device_manager/utils/: BUILD.gn
build-repo/foundation/filemanagement/dfs_service/: BUILD.gn  README.md  README_zh.md  bundle.json  distributedfile.gni
build-repo/foundation/filemanagement/dfs_service/services/: 5201.xml  BUILD.gn  distributed_file.para  distributedfile.cfg
build-repo/foundation/filemanagement/dfs_service/utils/: BUILD.gn
build-repo/foundation/systemabilitymgr/samgr/etc/: BUILD.gn  samgr.para  samgr.para.dac  samgr_standard.cfg
dsoftbus/unitree_softbus_demo/: .gitignore  CMakeLists.txt  README.md
dsoftbus/unitree_softbus_demo/include/softbus_sdk/: robot_walk.h
dsoftbus/unitree_softbus_demo/softbus_demo/client/: robot_client.cpp  robot_walk.cpp
(+4011 files in other folders)
