# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/customization/config_policy/config_policy.gni")

group("config_policy_components") {
  if (os_level == "standard" && support_config_policy_napi) {
    deps = [
      "//base/customization/config_policy/frameworks/config_policy:configpolicy_util",
      "//base/customization/config_policy/interfaces/kits/js:configpolicy",
    ]
  } else {
    deps = [ "//base/customization/config_policy/frameworks/config_policy:configpolicy_util" ]
  }
}
