# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("deviceauth_env.gni")

group("deviceauth_sdk_build") {
  if (os_level == "standard" || os_level == "small") {
    deps = [ "services:deviceauth_sdk" ]
  }
}

group("deviceauth_service_build") {
  if (os_level == "standard" || os_level == "small") {
    deps = [ "services:deviceauth_service" ]
  }
}

group("deviceauth_build") {
  deps = [ "services:deviceauth" ]
}

group("deviceauth_test_build") {
  deps = []
  if (os_level == "standard") {
    testonly = true
    deps += [
      "test/fuzztest/group_auth/authdevice_fuzzer:fuzztest",
      "test/fuzztest/group_auth/processauthdata_fuzzer:fuzztest",
      "test/fuzztest/group_manage/addmember_fuzzer:fuzztest",
      "test/fuzztest/group_manage/checkaccess_fuzzer:fuzztest",
      "test/fuzztest/group_manage/creategroup_fuzzer:fuzztest",
      "test/fuzztest/group_manage/deletegroup_fuzzer:fuzztest",
      "test/fuzztest/group_manage/deletemember_fuzzer:fuzztest",
      "test/fuzztest/group_manage/getdeviceinfobyid_fuzzer:fuzztest",
      "test/fuzztest/group_manage/getgroupinfo_fuzzer:fuzztest",
      "test/fuzztest/group_manage/getgroupinfobyid_fuzzer:fuzztest",
      "test/fuzztest/group_manage/getjoinedgroups_fuzzer:fuzztest",
      "test/fuzztest/group_manage/getpkinfolist_fuzzer:fuzztest",
      "test/fuzztest/group_manage/getregisterinfo_fuzzer:fuzztest",
      "test/fuzztest/group_manage/getrelatedgroups_fuzzer:fuzztest",
      "test/fuzztest/group_manage/gettrusteddevices_fuzzer:fuzztest",
      "test/fuzztest/group_manage/isdeviceingroup_fuzzer:fuzztest",
      "test/fuzztest/group_manage/processbinddata_fuzzer:fuzztest",
      "test/fuzztest/group_manage/registercallback_fuzzer:fuzztest",
      "test/fuzztest/group_manage/registerdatachangelistener_fuzzer:fuzztest",
      "test/fuzztest/group_manage/unregistercallback_fuzzer:fuzztest",
      "test/fuzztest/group_manage/unregisterdatachangelistener_fuzzer:fuzztest",
      "test/unittest/deviceauth:deviceauth_llt",
    ]
  }
}

group("key_agree_sdk_test_build") {
  if (os_level == "standard") {
    testonly = true
    deps = [ "test/unittest/deviceauth:key_agree_sdk_llt" ]
  }
}
