# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  datamgr_service_power = true
  if (!defined(global_parts_info.power_manager_native_powermgr_client) ||
      !defined(global_parts_info.battery_manager_native_batterysrv_client)) {
    datamgr_service_power = false
  }

  if (!defined(global_parts_info) ||
      defined(global_parts_info.account_os_account)) {
    os_account_part_is_enabled = true
  } else {
    os_account_part_is_enabled = false
  }
}
