# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

group("distributedtest") {
  testonly = true
  deps = []
  deps += [ "test/distributedtest/single_kvstore_client:distributedtest" ]
}

###############################################################################

group("build_native_test") {
  testonly = true
  deps = [
    "frameworks/innerkitsimpl/distributeddatafwk/test:unittest",
    "frameworks/libs/distributeddb/test:unittest",
  ]
}

###############################################################################
group("unittest") {
  testonly = true
  deps = []
  deps += [
    "frameworks/innerkitsimpl/kvdb/test:unittest",
    "test/unittest:unittest",
  ]
}

###############################################################################

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    "test/fuzztest/blob_fuzzer:fuzztest",
    "test/fuzztest/devicekvstore_fuzzer:fuzztest",
    "test/fuzztest/distributedkvdatamanager_fuzzer:fuzztest",
    "test/fuzztest/singlekvstore_fuzzer:fuzztest",
    "test/fuzztest/taskscheduler_fuzzer:fuzztest",
    "test/fuzztest/typesutil_fuzzer:fuzztest",
  ]
}
###############################################################################
