# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  if (ohos_kernel_type == "liteos_m") {
    lite_component("devicemanager_mini") {
      features = [
        "utils:devicemanagerutils_mini",
        "services/service:devicemanagerservice_mini",
        "interfaces/inner_kits/native_cpp:devicemanagersdk_mini",
        "interfaces/kits/js_mini:devicemanager_native_js",
      ]
    }
    group("device_manager_test") {
      testonly = true
      deps = []
    }
  } else {
    lite_component("device_manager") {
      features = [ "utils:devicemanagerutils" ]
    }
    lite_component("device_manager_fwk") {
      features = [ "interfaces/inner_kits/native_cpp:devicemanagersdk" ]
    }
    group("device_manager_test") {
      testonly = true
      deps = []
    }
  }
} else {
  group("device_manager") {
    deps = [
      "ext:ext_modules",
      "sa_profile:dm_sa_profile",
      "services/etc:ohos.para.dac",
      "services/implementation:devicemanagerserviceimpl",
      "services/service:devicemanagerservice",
      "utils:devicemanagerutils",
    ]
  }
  group("device_manager_fwk") {
    deps = [
      "interfaces/inner_kits/native_cpp:devicemanagersdk",
      "interfaces/kits:devicemanager_native_js",
    ]
  }
  group("device_manager_test") {
    testonly = true
    deps = [ "test:test" ]
  }
}
