# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "hiviewdfx/hitrace"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include",
    "//base/hiviewdfx/hilog/frameworks/native/include",
    "//commonlibrary/c_utils/base/include",
  ]
}

ohos_unittest("HitraceCTest") {
  module_out_path = module_output_path

  sources = [
    "//base/hiviewdfx/hitrace/frameworks/native/hitracechainc.c",
    "unittest/common/native/hitracechainc_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [ "//third_party/googletest:gtest_main" ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
  ]
}

ohos_unittest("HitraceCppTest") {
  module_out_path = module_output_path

  sources = [
    "//base/hiviewdfx/hitrace/frameworks/native/hitracechain.cpp",
    "//base/hiviewdfx/hitrace/frameworks/native/hitracechainc.c",
    "//base/hiviewdfx/hitrace/frameworks/native/hitraceid.cpp",
    "unittest/common/native/hitracechaincpp_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [ "//third_party/googletest:gtest_main" ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
  ]
}

config("HitraceNDKTest_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//base/hiviewdfx/hitrace/cmd/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
  ]
}

ohos_unittest("HitraceNDKTest") {
  module_out_path = module_output_path

  sources = [ "unittest/hitrace_meter/hitrace_ndk_test.cpp" ]

  configs = [ ":HitraceNDKTest_config" ]

  deps = [
    "//base/hiviewdfx/hitrace/cmd:hitrace_osal_inner",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits:hitrace_meter",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "hilog_native:libhilog",
    "init:libbegetutil",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":HitraceCTest",
    ":HitraceCppTest",
    ":HitraceNDKTest",
  ]
  if (support_jsapi) {
    deps += [ "unittest/common/napi:unittest" ]
  }
}
